components/com_kunena/site/template/crypsis/less/general.less
/**
* Kunena Component
* @package Kunena.Template.Crypsis
*
* @copyright (C) 2008 - 2015 Kunena Team. All rights reserved.
* @license http://www.gnu.org/copyleft/gpl.html GNU/GPL
* @link http://www.kunena.org
**/

.red {
	color : rgba(232, 15, 34, 1) !important;
}

.orange {
	color : rgba(235, 99, 1, 1) !important;
}

.yellow {
	color : rgba(252, 209, 21, 1) !important;
}

.green {
	color : rgba(128, 186, 1, 1) !important;
}

.lightblue {
	color : rgba(185, 232, 250, 1) !important;
}

.blue {
	color : rgba(0, 114, 198, 1) !important;
}

.grey {
	color : rgba(204, 204, 204, 1) !important;
}

.filter {
	width : auto;
}

a:active,
a:focus,
select:focus,
input[type='file']:focus,
input[type='radio']:focus,
input[type='checkbox']:focus {
	outline : 0 !important;
}

h2 {
	padding-bottom : 2%;
	margin-bottom  : 10px;
}

.kgooglemap {
	width    : 100%;
	display  : block;
	height   : 480px;
	overflow : hidden;
	position : relative;
	img {
		max-width : none !important;
	}
}

.knewchar {
	padding-left : 3px;
}

.kfrontend .section {
	margin-bottom : 20px;
}

.kfrontend:hover .btn,
.kprofile:hover .kinfo {
	visibility : visible;
}

.kfrontend .btn,
.kprofile .kinfo {
	visibility : hidden;
}

.navbar-inner {
	padding : 0;
}

.navbar .nav > li > a {
	padding : 11px 8px 11px;
}

#messages li {
	float          : left;
	margin-bottom  : 30px;
	padding-bottom : 30px;
}

.message {
	margin : 20px 0;
}

.btn-marging {
	margin-bottom : 0;
}

.kreply-form {
	display       : none;
	margin-left   : 20px;
	margin-bottom : 30px;
	box-shadow    : 0 0 6px #B2B2B2;
}

.kmsgattach {
	padding-left : 30px;
	padding-top  : 10px;
}

.pagination {
	margin : 3px 0;
}

.kfile-input-textbox {
	display : inline-block;
}

.kattachment {
	padding-top : 5px;
}

.kattachment-insert {
	margin-left : 20px;
}

img {
	max-width : 100%;
	width     : auto \9;
	height    : auto;
}

.table {
	float : left;
}

.form-search {
	margin : 0;
}

.kpoll {
	padding-left : 90px;
}

.img-polaroid {
	border-color  : #ddd;
	border-radius : 4px;
}

.topic-starter {
	background    : rgba(229, 229, 229, 0.4);
	display       : inline-block;
	height        : 15px;
	line-height   : 0.8em;
	border-radius : 0 0 4px 4px;
	white-space   : nowrap;
	padding-top   : 4px;
	border        : 1px solid #ddd;
	border-top    : 0 none;
	padding-left  : 8px;
	padding-right : 8px;

	&.topic-starter:after {
		content        : "Topic Author";
		color          : #3a87ad;
		line-height    : 1em;
		font-size      : 10px;
		font-weight    : bold;
		text-transform : uppercase;
	}
}

hr {
	margin : 0;
}

.kfrontend .table td {
	padding : 10px;
}

.kfrontend .table td h1,
.kfrontend .table td h2,
.kfrontend .table td h3,
.kfrontend .table td h4,
.kfrontend .table td h5,
.kfrontend .table td h6 {
	margin      : 0 !important;
	line-height : 20px;
}

ul li {
	list-style : none;
}

.topictitle {
	font-size : 110%;
}

.viewsnum,
.repliesnum {
	font-size : 110%;
	float     : right;
}

.breadcrumb {
	padding          : 0;
	margin-bottom    : 20px;
	background-color : transparent;
}

input[type='checkbox'] {
	zoom    : 1;
	filter  : alpha(opacity=50);
	opacity : 0.5;
}

a:focus,
.btn:focus {
	outline : none !important;
}

.qreply {
	min-height : 150px !important;
	width      : 98%;
}

.desc {
	display : block;
}

.horizontal-message {
	border        : 1px solid #ddd;
	box-shadow    : 0 1px 3px rgba(0, 0, 0, 0.1);
	margin-top    : 20px;
	min-height    : 140px;
	margin-bottom : 20px;
	border-radius : 4px;
}

.horizontal-message-top .kmsg {
	padding-top  : 40px;
	min-height   : 140px;
	padding-left : 10px;
}

.horizontal-message-bottom .kmsg {
	margin-top   : 50px;
	min-height   : 140px;
	padding-left : 10px;
}

.horizontal-message .kmessage {
	padding : 10px;
}

[class*="horizontal-message-top"] {
	position : relative;
}

.horizontal-message-top:after {
	content       : attr(data-badger);
	position      : absolute;
	top           : 0;
	font-weight   : bold;
	padding       : 8px 12px;
	margin-top    : -10px;
	border-right  : 1px solid #ddd;
	border-bottom : 1px solid #ddd;
}

[class*="horizontal-message-bottom"] {
	position : relative;
}

.horizontal-message-bottom:after {
	content       : attr(data-badger);
	position      : absolute;
	top           : 0;
	font-weight   : bold;
	padding       : 8px 12px;
	border-right  : 1px solid #ddd;
	border-bottom : 1px solid #ddd;
}

[class*="badger"] {
	position      : relative;
	margin        : 15px 0;
	padding       : 39px 19px 0 14px;
	border-radius : 4px;
	min-height    : 180px;
	border        : 1px solid #ddd;
	box-shadow    : 0 1px 3px rgba(0, 0, 0, 0.1);
}

[class*="badger"]:after {
	content       : attr(data-badger);
	position      : absolute;
	top           : 0;
	padding       : 8px 12px;
	font-weight   : bold;
	border-right  : 1px solid #ddd;
	border-bottom : 1px solid #ddd;
}

.badger-left:after {
	left          : 0;
	border-radius : 4px 0 4px 0;
}

.badger-info:after {
	background : rgba(229, 229, 229, 0.4);
}

legend {
	color : inherit;
}

div.kmsgtext-article,
div.kmsgtext-quote,
div.kmsgtext-hide,
div.kmsgtext-code,
div.kmsgtext-confidential {
	font-size     : 12px;
	line-height   : 18px;
	-moz-tab-size : 4;
	tab-size      : 4;
	border-radius : 3px;
	display       : block;
	border        : 1px dotted;
	margin        : 5px;
	padding       : 5px;
	font-style    : italic;
}

#kwho > div > p,
#kstats > div > p {
	margin : 0;
}

form {
	margin : 0;
}

.timefilter {
	padding-right : 10px;
}

.kmsg {
	height    : 100%;
	margin    : 20px 0;
	word-wrap : break-word;
}

.input-xxlarge {
	width  : 98%;
	height : 100%;
}

.kprofile-down {
	margin-top    : 13px;
	border        : 1px solid rgba(0, 0, 0, 0.1);
	background    : rgba(0, 0, 0, 0.02);
	border-radius : 5px;
}

ul, ol {
	padding : 0;
}

.dl-horizontal dt {
	width : auto;
}

.row-fluid > .span12 > .row-fluid > .span12 {
	width        : 110%;
	margin-right : -60px;
}

.chzn-container, .chzn-drop {
	max-width : 100% !important;
}

#kchecktarget:disabled {
	display : none;
}

div.navbar > div > div.visible-phone.hidden-tablet > ul {
	padding-top  : 0;
	padding-left : 10px;
	margin-top   : 5px;
}

#ktopicsform {
	padding-bottom : 10px;
}

.topic-item-unread {
	border-left   : 3px solid green;
	border-radius : 2px 0 2px 0;
}

.kmessage {
	min-height     : 120px;
	padding-bottom : 10px;
}

.ksig {
	margin     : 5px;
	min-height : 20px;
}

.ksignature {
	margin-top : 15px;
}

.vid {
	position       : relative;
	padding-bottom : 56.25%;
	padding-top    : 30px;
	height         : 0;
	overflow       : hidden;
}

.vid iframe,
.vid object,
.vid embed {
	position : absolute;
	top      : 0;
	left     : 0;
	width    : 100%;
	height   : 100%;
}

.khistory {
	min-height : 150px;
}

#kchecktask {
	margin : 0
}

select#mode {
	margin-left : 69px;
}

.table th, .table td {
	line-height : 20px;
}

.message-deleted {
	background-color : rgba(0, 0, 0, 0.1);
	padding          : 8px;
	margin-bottom    : 15px;
	border-radius    : 5px;
}

.input-append {
	margin : 0;
}

.btn-toolbar {
	margin : 0;
}

.form-search .input-append {
	margin : 3px 0;
}

table .well {
	margin-bottom : 0;
}

.filter-state {
	font-size : 150%;
}

.filter-state .btn {
	padding        : 0 6px;
	vertical-align : inherit;
	font-size      : inherit;
	line-height    : 150%
}

.nav .dropdown-menu a {
	display         : inline-block;
	text-decoration : none;
	.btn-link {
		margin-left : -120px;
	}
}

.profilebox {
	margin-top : -5px;
}

.profile-horizontal-top {
	padding          : 10px 5px 5px 5px;
	border-bottom    : 1px solid #ddd;
	background-color : rgba(229, 229, 229, 0.4);
	box-shadow       : 0 1px 3px rgba(0, 0, 0, 0.1);
	margin-bottom    : 10px;
	min-height       : 110px;
}

.profile-horizontal-bottom {
	padding          : 10px 5px 5px 5px;
	border-top       : 1px solid #ddd;
	background-color : rgba(229, 229, 229, 0.4);
	box-shadow       : 0 1px 3px rgba(0, 0, 0, 0.1);
	min-height       : 110px;
}

.table .pagination {
	max-height : 25px;
}

.dropdown-menu .form-inline {
	margin : 0;
}

.profile-expand .content ul {
	margin : 0;
}

.kfrontend .inline > li {
	float : left;
}

#kbbcode-poll-options {
	margin : 20px 0;
}

.collapse .table {
	margin-bottom : 0;
}

h2 .pull-right select {
	line-height : 40px;
	margin      : 0;
}

.pagination {
	padding : 0;
}

.pagination ul > li {
	display : inline;
}

.pagination-small ul > li > a,
.pagination-small ul > li > span {
	padding     : 4px 6px !important;
	line-height : 15px !important;
}

.pagination ul > li > a,
.pagination ul > li > span {
	float            : left;
	padding          : 4px 12px;
	line-height      : 20px;
	background-color : transparent;
	border           : 1px solid #dddddd;
	margin           : 0;
}

#recent-topics .span2,
#recent-topics .span10 {
	margin-left : 0;
}

#recent-topics img.img-thumbnail {
	vertical-align : text-top;
	margin-right   : 10px;
}

.nowrap {
	white-space : nowrap;
}

div.btn-toolbar .font-size-is-default {
	font-size   : 16px;
	line-height : 1.7em;
}

select#categorylist {
	width : auto;
}

div#editprofile input,
div#editprofile select,
div#home input,
div#home select,
div#editsettings select {
	float  : left;
	margin : 0 5px 0 0;
}

.collapse {
	transition : height 0.01s;
}

div.kmsg > li {
	margin-left : 20px;
}

.kcontenttablespacer {
	border-bottom-color : #BFC3C6;
}

.krow1-stickymsg {
	background-color : #FFFFCC;
}

.krow2-stickymsg {
	background-color : #FFFFCC;
}

#logout-form {
	float : left;
	.btn-link {
		text-decoration : none;
		margin-left     : 5px;
	}
}

small.text-muted {
	margin-top : -10px;
}

#credits .dl-horizontal dt {
	text-align  : left !important;
	margin-left : 10px;
}

#credits .dl-horizontal dd {
	margin-left : 160px !important;
}

#credits dd,
#credits dt {
	padding : 5px 0;
}

#credits dt {
	font-weight : normal !important;
}

#credits .dl-horizontal dt:nth-child(odd),
#credits .dl-horizontal dd:nth-child(even) {
	background-color : #f9f9f9;
}

.credits {
	border        : 1px solid #e5e5e5;
	border-radius : 10px;
	padding       : 0 20px;
}

.icon-chevron-right {
	font-size      : 80%;
	padding-bottom : 3px;
}

#topic-actions {
	padding-bottom : 10px;
}

#userdropdown {
	padding-top : 20px;
}

#index-avatar .media {
	padding-right : 10px;
}

#status-form label.btn a.btn {
	padding : 0 0 0 5px;
}

.navbar .btn,
.navbar .btn-group {
	margin-top : 0;
}

#nav-menu {
	width : 190px;
}

#nav-menu a {
	padding : 5px 10px 5px 15px;
}

#nav-menu img {
	margin-left : -5px;
}

select#postcatid {
	width : 100%;
}

.icon-big {
	font-size : 32px;
}

#ktopicsform [class*='span'] {
	margin-left : 0 !important;
}

.ip {
	margin : 0 0 10px;
	width  : 150px;
}

.report {
	margin-left     : 20px;
	text-decoration : none;
}

.intro {
	margin : 0 0 10px 60px;
}

input[type=radio] + label {
	display          : inline-block;
	margin           : -2px;
	padding          : 4px 12px;
	background-color : transparent;
}

input[type=radio]:checked + label {
	background    : rgba(0, 0, 0, 0.07) none;
	border        : 1px solid rgba(0, 0, 0, 0.2);
	border-radius : 4px;
}

label img {
	pointer-events : none;
}

input[type=radio] {
	display : none;
}

div#kwho .well,
div#kstats .well {
	padding-left : 25px;
}

#editavatar input[type=radio],
#poll-vote input[type=radio],
#search input[type=radio] {
	display : block;
}

ul.inline span.kicon {
	height        : 24px;
	transform     : scale(0.5);
	margin-bottom : -7px;
}

ul.inline i {
	padding-top   : 2px;
	padding-right : 5px;
}

#kwho i.icon-big,
#kstats i.icon-big,
[class*="category"] i.icon-big {
	margin-top    : 12px;
	padding-right : 8px;
}

.dropdown-menu {
	min-width : 160px;
}

#search [class*='span'] {
	margin-left: 6px !important;
}

